# wellspring

./: .env.example  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vercel.json
data/songs/: 010dcafb07a075f4.json  01fb30dafd8f6471.json  02d9dbdcd381f2e9.json  0380bcc7fcb26f77.json  05446b64b7c0c1cd.json  072786bbde4e8252.json  0744c6c369459de8.json  0764e20f553c0dff.json  0778f96d2638585a.json  08191b54a323753b.json  0b06f91a57e5ae3d.json  0d9a3afae9394b31.json  0e4b3f409ab61703.json  0edceb0bb086957c.json  0f58426f4a675ac7.json  0ff3df39c2942406.json  10f7eb07bc6cedee.json  114d18fa8e65cc19.json  119c41e45ad3a46f.json  136ae248dfdb10ba.json  1417cf19242eac71.json  14ac2d1853e18fbb.json  15fe83198025ea2b.json  16cbc75ad42f803b.json  191ab2def50c32f2.json  19871967a7b9d7f0.json  19e8e6b460b8d828.json  19fec89998635892.json  1abe953293c0c478.json  1b5f643144763d61.json  1bc63d5d65aef9cf.json  1c225c1908f9d01c.json  1c23221d137d93ee.json  1cf9e0530efcfd0b.json  1ddb893f02c32299.json  1f23069c8711c2e8.json  2091a1b449e6d62e.json  23282af6f99e7b95.json  233bb66afa3d8c32.json  23bd4c19c5090093.json  (+320 more)
data/terms/: 01d6c2b8c5d3681f.json  028905050cf5c31e.json  0488e0f9bb519f37.json  06a2c5d281ab6a5d.json  06c0803feb6271db.json  07e65fafd6ca82c8.json  088a8a931dd115dd.json  09f9b062d5b5cf70.json  0cd6feeeb838c5d1.json  0de36c2c9c5a38aa.json  0fe1b4a73fced5e2.json  0ffaf817c4c5bb64.json  11b34f38b6897a90.json  1413ad8e4c4aeee5.json  15b03ad876bcf729.json  18511a532e766f20.json  196824d58414052b.json  1ad2f92e6aafcac9.json  1af6cb8496ab8fe6.json  1bb5607263587be7.json  1d9c519fd08b3743.json  1e2d039594d1f936.json  1e540377840932e6.json  1e8c5ae4c96e79e9.json  228726b1bf789a59.json  22bd42cf752aefce.json  237648e817cf45ff.json  24dd7d19e0a0f917.json  2511b74e899e182c.json  255a1e4187f8d711.json  275a49984191898b.json  27ecccbfb4dc3024.json  28c4ba12a75625b9.json  28dd726ef7856518.json  2a2e2224b1e2b2fe.json  2d1f12de1d65a199.json  2d64a123c4aafcda.json  2d738b51e5e25a4e.json  2e48a3a2c81d860d.json  2fdba7528139c331.json  (+166 more)
docs/: SPEC.md  TODO.md
scripts/: db_export.py  db_init.sql  db_reset.py
src/: main.py
src/core/: config.py  db.py  logging.py  models.py  text.py
src/music_pipeline/: definitions.py
src/music_pipeline/assets/: analytics.py  catalog.py  export.py  indexing.py  lyrics.py  matching.py  normalization.py  serving.py  spotify.py  terms.py  website.py  youtube.py
src/music_pipeline/resources/: __init__.py  gemini.py  youtube.py
src/music_pipeline/utility/: text.py
src/pipeline/: runner.py
src/pipeline/stages/: create_stats.py  match_media.py  scrape_media.py  scrape_songs.py
tests/: test_config.py  test_db.py  test_terms.py  test_text.py
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ChineseCharacter.tsx  ChineseModeToggle.tsx  GlassCard.tsx  Lyric.tsx  LyricLine.tsx  RenderGroup.tsx  Sidebar.tsx  Song.tsx  SongCard.tsx  Term.tsx  TermCard.tsx  Word.tsx
web/context/: ChineseModeContext.tsx
web/lib/: pinyin.ts  songs.ts  terms.ts
web/types/: song.ts  term.ts
(+559 files in other folders)
